--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <button onclick="desistir()">Desistir</button>
 
     <p id="resultado" class="hidden"></p>
-    <p id="declaracao" class="hidden">Parabéns, Pedro Otávio e Edgar! 🎉 Hoje celebramos 2 anos de um amor lindo, forte e verdadeiro. Que cada dia seja repleto de cumplicidade, carinho e momentos inesquecíveis. Vocês são prova de que o amor supera tudo e cresce a cada instante. Que venham muitos anos mais dessa jornada incrível juntos! ❤️</p>
+    <p id="declaracao" class="hidden">Parabéns, Pedro Otávio e Edgar! 🎉 Hoje celebramos 2 anos de um amor lindo, forte e verdadeiro. Que cada dia juntos seja repleto de amor, carinho e momentos inesquecíveis. Nós somos a prova de que o amor supera tudo e cresce a cada instante. Que venham muitos anos mais dessa jornada incrível juntos! Eu te amo para todo o sempre, meu amor. ❤️</p>
 
     <script>
         function calcularAmor() {
@@ -70,7 +70,7 @@
                 return;
             }
 
-            resultado.textContent = `Você ama o Edgar ${amorPedro} vezes, mas o Edgar ama você INFINITAMENTE mais! ❤️`;
+            resultado.textContent = `Você ama o Edgar ${amorPedro} %, mas o Edgar ama você INFINITAMENTE mais! ❤️`;
             resultado.classList.remove('hidden');
             declaracao.classList.add('hidden');
         }
