--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <button onclick="desistir()">Desistir</button>
 
     <p id="resultado" class="hidden"></p>
-    <p id="declaracao" class="hidden">Parabéns, Pedro Otávio e Edgar! 🎉 Hoje celebramos 2 anos de um amor lindo, forte e verdadeiro. Que cada dia juntos seja repleto de amor, carinho e momentos inesquecíveis. Nós somos a prova de que o amor supera tudo e cresce a cada instante. Que venham muitos anos mais dessa jornada incrível juntos! Eu te amo para todo o sempre, meu amor. ❤️</p>
+    <p id="declaracao" class="hidden">Parabéns para nós, meu amor! 🎉 Celebramos 2 anos de um amor lindo, forte e verdadeiro. Que cada dia juntos seja repleto de amor, carinho e momentos inesquecíveis. Nós somos a prova de que o amor supera tudo e cresce a cada instante, independente de qualquer coisa. Que venham muitos anos mais dessa jornada incrível juntos! Eu te amo para todo o sempre, meu amor. ❤️</p>
 
     <script>
         function calcularAmor() {
